--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "@gnosis.pm/safe-apps-react-sdk": "^4.0.4",
-    "@gnosis.pm/safe-react-components": "^0.8.0",
+    "@gnosis.pm/safe-react-components": "^0.9.1",
     "@material-ui/core": "^4.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "styled-media-query": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
