--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@gnosis.pm/safe-apps-react-sdk": "^4.0.4",
+    "@gnosis.pm/safe-apps-provider": "^0.9.2",
+    "@gnosis.pm/safe-apps-react-sdk": "^4.0.8",
+    "@gnosis.pm/safe-apps-sdk": "^6.1.1",
     "@gnosis.pm/safe-react-components": "^0.9.1",
     "@material-ui/core": "^4.11.0",
+    "ethers": "^5.5.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
