contracts: add maticjs & maticjs-ethers.

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@maticnetwork/maticjs": "^3.0.0",
+    "@maticnetwork/maticjs-ethers": "^1.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
